Bug 812716 - Desktop Notifications: Race in nsDOMDesktopNotification constructor. r=dougt