dom/src/notification/nsDesktopNotification.cpp
@@ -84,9 +84,12 @@ nsDOMDesktopNotification::nsDOMDesktopNotification(const nsAString & title,
   if (Preferences::GetBool("notification.prompt.testing", false) &&
       Preferences::GetBool("notification.prompt.testing.allow", true)) {
     mAllow = true;
-    return;
   }
+}
 
+void
+nsDOMDesktopNotification::Init()
+{
   nsRefPtr<nsDesktopNotificationRequest> request = new nsDesktopNotificationRequest(this);
 
   // if we are in the content process, then remote it to the parent.
@@ -117,7 +120,6 @@ nsDOMDesktopNotification::nsDOMDesktopNotification(const nsAString & title,
 
   // otherwise, dispatch it
   NS_DispatchToMainThread(request);
-
 }
 
 nsDOMDesktopNotification::~nsDOMDesktopNotification()
@@ -204,11 +206,12 @@ nsDesktopNotificationCenter::CreateNotification(const nsAString & title,
                                                 nsIDOMDesktopNotification **aResult)
 {
   NS_ENSURE_STATE(mOwner);
-  nsRefPtr<nsIDOMDesktopNotification> notification = new nsDOMDesktopNotification(title, 
-                                                                                  description,
-                                                                                  iconURL,
-                                                                                  mOwner,
-                                                                                  mPrincipal);
+  nsRefPtr<nsDOMDesktopNotification> notification = new nsDOMDesktopNotification(title, 
+                                                                                 description,
+                                                                                 iconURL,
+                                                                                 mOwner,
+                                                                                 mPrincipal);
+  notification->Init();
   notification.forget(aResult);
   return NS_OK;
 }
